lab1/Test/L1-A-7-54.output
Error Type A at Line 14
Error Type A at Line 18
Error Type A at Line 29
Error Type A at Line 33
Error Type A at Line 38
