lab1/Test/L1-A-7-54.cmm
int l75ZcMa [ 1901697939 ] , CyDGeIdcU 

;
struct anb8mK RiWoVwuDkB5 ( ) {
  float QZl3hdmcM7CRv22Sv = JHenCWaKOMi = P4o3xr6sktLE 
    || KaodOBqVOnf <= - ! VL4K7zkb95JzTJTbxk [ DWuxGcCowQRYeVd2KYw 
    && Xve7DMVzNbnPTYE > U30qr4I3iSCb + - xo0 ( qrxXcTRkslrxKx6_nzJ 
    || XEwuRayR && _dF3MlsZgSPY - - - ( Vd || kTH3vA4j6q2 
    != damb + uKha2O [ JKivIH7m2W764hYYV9JN = Rq > SR21gg 
    - ( MIileg_aK9bp > nOarqWJWs - - ( g39lpKdFhhtyh = 
    eKZQ || EgxrVXZiJwa + rhYodukKUfjnTTNI_ / ( XOJEw 
    != LpWGurv8CefgqfD ( pe7j03vtuPk , ZcMw ) ) ) ) + 
    ! aOehMlkji6EJ >= ! tAuaHV3WvzQ1 < ypZ_f6SQwv_JNcEr 
    ] == 1660075335.781768822 ) ^) * wA1qOPs7eJhOU ( ) 
    . Ch8HmoAn ] / 617561406 , qX2ZE ;
}
struct {
};:
struct roFOUPofQN7TQHkvE {
};
int ;
int ;
int PAMtxlVJUpVmD9X ( int QH1 , int WJjTcSfvyJt ) 
  {
  m_pUwhNr ;
  if ( YGctQuzpnAKBud_GQ )   while ( leqOvpug5luocc 
    ) {
    if ( Fmx8cdREK2KE0n5o )     P ;
else     if ( s7 )     if #( VM7JLWxeJoPby2w )     ih8S 
      ;


~
  }
else   return cCkbX_ ;

}
^